Menambahkan halaman tutorial

--- a/Style.css
+++ b/Style.css
@@ -13,7 +13,7 @@ nav{
     height: 70px;
     width: 100%;
 }
-label.logo{
+label.logo image{
     color: rgb(255, 255, 255);
     font-size: 25px;
     line-height: 70px;
