Menambahkan tampilan portofolio dengan bootstrap

--- a/cv.css
+++ b/cv.css
@@ -31,12 +31,13 @@ nav a:hover{
 }
 
 body .judul{
-    height: 13%;
+    height: 15%;
     background: rgb(36, 71, 148);
-    padding: 13px;
+    padding: 15px;
     text-align: center;
     color: #fff;
     font-size: 23px;
+    margin-bottom: 20px;
 }
 .judul h2{
     font-family:'poppins';
