--- a/portofolio.css
+++ b/portofolio.css
@@ -1,80 +1,9 @@
-*{
-    margin : 0px;
-    padding: 0px;
-    font-family: Roboto;
-    text-decoration: none;
-    list-style: none;
-    box-sizing: border-box;
-}
-body .judul{
-    height: 13%;
-    background: rgb(36, 71, 148);
-    padding: 13px;
-    text-align: center;
-    color: #fff;
-    font-size: 23px;
-}
-.judul h2{
-    font-family:'poppins';
-    src:url('poppins.ttf');
-    font-style: bold;
-    font-size: 25px;
-}
-.cards {
-    margin: 0 auto;
-    max-width: 1000px;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
-    grid-auto-rows: auto;
-    gap: 20px;
-    font-family: sans-serif;
-    padding-top: 30px;
-}
-
-.cards * {
-    box-sizing: border-box;
-}
-
-.card__image {
-    border-top-left-radius: 10%;
-    border-top-right-radius: 10%;
+.imggallery{
     margin-top: 50px;
-    width: 100%;
-    height: 150px;
-    object-fit: cover;
-    display: block;
+    max-height: 250px;
 }
-
-.card__content > p:first-of-type {
-    margin-top: 0;
-}
-.card__content h4{
-    font-size: 15px;
-    text-align: center;
+body h4{
+    margin-top: 25px;
     font-family:'poppins';
     src:url('poppins.ttf');
-}
-.card__content p{
-    font-size: 10px;
-    font-family:'poppins';
-    src:url('poppins.ttf');
-}
-
-.card__content > p:last-of-type {
-    margin-bottom: 0;
-}
-
-
-.card__info i {
-    font-size: 0.9em;
-    margin-right: 8px;
-}
-
-.card__link {
-    color: #64968c;
-    text-decoration: none;
-}
-
-.card__link:hover {
-    text-decoration: underline;
 }
